<resources>
    <string name="app_name">AntMovies</string>
    <string name="title_infos">Infos</string>
    <string name="msg_infos">{0} films.\n{1} jours restant.</string>
    <string name="msg_no_infos">Aucune information disponible actuellement</string>
    <string name="title_trash">Trash</string>
    <string name="title_movie">Movies</string>
    <string name="title_tonigth">Tonigth</string>
    <string name="title_tosee">ToSee</string>
    <string name="title_saw">Saw</string>

    <string name="title_imdb">IMDB</string>
    <string name="title_telerama">TELERAMA</string>
    <string name="title_ok">OK</string>
</resources>
